--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "“http://uxchar.github.io/arrow-webapp",
+  "homepage": "“https://uxchar.github.io/arrow-webapp",
   "private": true,
   "dependencies": {
     "-": "0.0.1",
@@ -41,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
