--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "“https://uxchar.github.io/arrow-webapp",
+  "homepage": "“https://uxchar.github.io/arrow-webapp/",
   "private": false,
   "dependencies": {
     "-": "0.0.1",
