--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.0"
