--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
+    "cors": "^2.8.5",
     "git-update-ghpages": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
